<resources>
    <string name="app_name">EduCode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="title_activity_tests">Tests</string>
    <string name="title_activity_glossary">Glossary</string>
    <string name="title_activity_progress">My Progress</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="forgot_password">Skip Login (Offline mode)</string>
    <string name="lessons">Lessons</string>
    <string name="tests">Tests</string>
    <string name="glossary">Glossary</string>
    <string name="progress">My Progress</string>
    <string name="title_activity_create_account">Registration</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="class_name">Class</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="intro">Introduction</string>
    <string name="maths">Maths</string>
    <string name="variables">Variables</string>
    <string name="declaring_variables">Declaring</string>
    <string name="using_variables">Using</string>
    <string name="statements">Statements</string>
    <string name="selection">Selection</string>
    <string name="ifstatement">If Statements</string>
    <string name="ifelse">If...Else</string>
    <string name="elseif">Else If</string>
    <string name="iteration">Iteration</string>
    <string name="for_loop">For loops</string>
    <string name="while_loop">While loops</string>
    <string name="do_while_loop">Do While loops</string>
    <string name="boolean_logic">Boolean</string>
    <string name="boolean_uses">Uses in code</string>
    <string name="arrays">Arrays</string>
    <string name="lists">Lists</string>
    <string name="functions">Functions</string>
    <string name="parameters">Parameters</string>
    <string name="sequence">Sequence</string>
    <string name="types">Types</string>
    <string name="title_activity_boolean_test">BooleanTestActivity</string>
    <string name="test">This short quiz will test you on your chosen topic. \n\nYour score will be saved once you have completed the test. \n\nYou can check your scores via the My Progress button on the EduCode home screen.</string>
    <string name="start_test">Start Test</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_get_question">GetQuestionActivity</string>
    <string name="question">Question: </string>
    <string name="quit">Quit</string>
    <string name="title_activity_score">Your Score</string>
    <string name="result">Your Result</string>
    <string name="returnTests">Return To Tests</string>
    <string name="returnHome">Return To Home</string>
    <string name="checkProgress">Check My Progress</string>
    <string name="title_activity_upload_score">UploadScoreActivity</string>
    <string name="title_activity_get_progress">GetProgressActivity</string>
    <string name="average_score">Your Average Score</string>
    <string name="title_activity_drag_drop_question">Question</string>
    <string name="statement_1">int a = 6;</string>
    <string name="statement_2">int b = 9;</string>
    <string name="statement_3">int sum = a + b;</string>
    <string name="statement_4">printf("%d", sum);</string>
    <string name="position_1">Put</string>
    <string name="position_2">the statements</string>
    <string name="position_3">in</string>
    <string name="position_4">order</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="title_activity_get_drag_drop_question">GetDragDropQuestionActivity</string>
    <string name="teacher_tests">Teacher Created Tests</string>
    <string name="title_activity_get_teacher_tests">GetTeacherTests</string>
    <string name="title_activity_display_teacher_tests">Tests From Your Teacher</string>
    <string name="title_activity_start_teacher_test">StartTeacherTestActivity</string>
    <string name="title_activity_get_teacher_question">GetTeacherQuestionActivity</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="title_activity_lesson">Lesson</string>
    <string name="lesson">This short lesson will teach you about the topic you have just selected. \n\nNavigate through the screens by selecting the Next button. \n\nPress Start to proceed.</string>
    <string name="start_lesson">Start Lesson</string>
    <string name="title_activity_lesson_screen">Boolean Logic Lesson</string>
</resources>
