<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout">
        <ImageView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/create"/>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:paddingLeft="30dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="500px"
                android:hint="@string/forename"
                android:singleLine="true"
                android:id="@+id/etForename"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:orientation="horizontal"
            android:paddingLeft="30dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="500px"
                android:singleLine="true"
                android:id="@+id/etSurname"
                android:hint="@string/surname"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:orientation="horizontal"
            android:paddingLeft="30dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="500px"
                android:singleLine="true"
                android:id="@+id/etUname"
                android:hint="@string/username"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:orientation="horizontal"
            android:paddingLeft="30dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="500px"
                android:singleLine="true"
                android:password="true"
                android:fontFamily="Arial"
                android:hint="@string/password"
                android:id="@+id/etPword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:orientation="horizontal"
            android:paddingLeft="30dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="500px"
                android:singleLine="true"
                android:hint="@string/class_name"
                android:id="@+id/etClass"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40px"></LinearLayout>
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background"
            android:textColor="#F0F0F0"
            android:textSize="8pt"
            android:layout_marginRight="25px"
            android:onClick="register">
        </Button>
    </LinearLayout>

</RelativeLayout>
