<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context=".HomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="250px"
        android:src="@drawable/head3"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="150px">
            <Button
                android:id="@+id/lessons"
                android:layout_width="350px"
                android:layout_height="150px"
                android:background="@drawable/oval_background"
                android:text="@string/lessons"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="10pt"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"
                android:onClick="startLessons">
            </Button>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="150px"
            android:paddingRight="20px">
            <Button
                android:id="@+id/tests"
                android:layout_width="350px"
                android:layout_height="150px"
                android:background="@drawable/oval_background2"
                android:text="@string/tests"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:textAllCaps="false"
                android:textSize="10pt"
                android:onClick="startTests"
                android:textColor="#FFFFFF">
            </Button>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="150px">
            <Button
                android:id="@+id/glossary"
                android:layout_width="350px"
                android:layout_height="150px"
                android:background="@drawable/oval_background"
                android:text="@string/glossary"
                android:textSize="10pt"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:onClick="startGlossary"
                android:textColor="#FFFFFF">
            </Button>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="150px"
            android:paddingRight="20px">
            <Button
                android:id="@+id/progress"
                android:layout_width="350px"
                android:layout_height="150px"
                android:background="@drawable/oval_background2"
                android:text="@string/progress"
                android:textSize="10pt"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:onClick="startProgress"
                android:textColor="#FFFFFF">
            </Button>
        </RelativeLayout>
        <LinearLayout
            android:layout_height="20px"
            android:layout_width="500px">
        </LinearLayout>
            <Button
                android:id="@+id/btnLogout"
                android:layout_height="wrap_content"
                android:layout_width="500px"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingRight="7dp"
                android:text="@string/logout"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:onClick="logout"
                android:layout_alignParentEnd="true"
                android:textAllCaps="false"
                android:background="@drawable/curved_button_background3"
                android:layout_marginRight="10dp"
                android:textColor="#F0F0F0"
                android:textSize="8pt">
            </Button>
    </LinearLayout>
</RelativeLayout>


