<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50px">
            <TextView
                android:layout_width="450px"
                android:layout_height="60px"
                android:textSize="10pt"
                android:paddingTop="3px"
                android:paddingLeft="40px"
                android:layout_gravity="center"
                android:fontFamily="Arial"
                android:text="@string/question"
                android:textColor="#3F48CC"
                android:textStyle="bold">
            </TextView>
            <Button
                android:layout_width="150px"
                android:layout_height="50px"
                android:id="@+id/btnExit"
                android:text="@string/quit"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="6pt"
                android:background="@drawable/curved_button_background"
                android:textColor="#F0F0F0"
                android:textAlignment="center"
                android:onClick="exitTest"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_question"
            android:paddingTop="20px"
            android:layout_width="600px"
            android:layout_height="150px"
            android:layout_gravity="center"
            android:fontFamily="Arial"
            android:paddingLeft="40px"
            android:textSize="6pt"
            android:textColor="#000000">
        </TextView>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="410px"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/position_one"
                android:layout_width="400px"
                android:layout_height="70px"
                android:layout_margin="5dp"
                android:textColor="#F0F0F0"
                android:textStyle="bold"
                android:background="@drawable/curved_button_background"
                android:gravity="center"
                android:text="@string/position_1" />
            <TextView
                android:id="@+id/position_two"
                android:layout_width="400px"
                android:layout_height="70px"
                android:textColor="#F0F0F0"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:background="@drawable/curved_button_background"
                android:gravity="center"
                android:text="@string/position_2" />
            <TextView
                android:id="@+id/position_three"
                android:layout_width="400px"
                android:layout_margin="5dp"
                android:background="@drawable/curved_button_background"
                android:layout_height="70px"
                android:textStyle="bold"
                android:textColor="#F0F0F0"
                android:gravity="center"
                android:text="@string/position_3" />
            <TextView
                android:layout_width="400px"
                android:layout_height="70px"
                android:textColor="#F0F0F0"
                android:id="@+id/position_four"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:background="@drawable/curved_button_background"
                android:gravity="center"
                android:text="@string/position_4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="300px"
                android:layout_height="70px"
                android:textColor="#F0F0F0"
                android:id="@+id/statement_one"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:background="@drawable/curved_button_background3"
                android:gravity="center" />
            <TextView
                android:layout_width="300px"
                android:layout_height="70px"
                android:textColor="#F0F0F0"
                android:id="@+id/statement_two"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:background="@drawable/curved_button_background3"
                android:gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100px"
                android:gravity="center">
                <TextView
                    android:layout_width="300px"
                    android:layout_height="70px"
                    android:textColor="#F0F0F0"
                    android:id="@+id/statement_three"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:background="@drawable/curved_button_background3"
                    android:gravity="center" />
                <TextView
                    android:layout_width="300px"
                    android:layout_height="70px"
                    android:textColor="#F0F0F0"
                    android:id="@+id/statement_four"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:background="@drawable/curved_button_background3"
                    android:gravity="center" />
                </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30px">
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="80px"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150px"
                    android:layout_height="50px"
                    android:id="@+id/btnReset"
                    android:text="@string/reset"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="6pt"
                    android:textColor="#F0F0F0"
                    android:onClick="resetQuestion"
                    android:background="@drawable/curved_button_background2"
                    android:textAlignment="center" />
                <LinearLayout
                    android:layout_width="30px"
                    android:layout_height="50px">
                </LinearLayout>
                <Button
                    android:layout_width="150px"
                    android:layout_height="50px"
                    android:id="@+id/btnSubmit"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="6pt"
                    android:onClick="submitQuestion"
                    android:background="@drawable/curved_button_background2"
                    android:textColor="#F0F0F0"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
