<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="250px"
            android:src="@drawable/head3"/>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="600px"
                android:hint="@string/username"
                android:textSize="10pt"
                android:fontFamily="Arial"
                android:singleLine="true"
                android:id="@+id/etUsername"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40px">
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90px"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="600px"
                android:fontFamily="Arial"
                android:hint="@string/password"
                android:textSize="10pt"
                android:singleLine="true"
                android:password="true"
                android:id="@+id/etPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px">
        </LinearLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="7dp"
            android:text="@string/login"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:onClick="login"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background"
            android:layout_marginRight="10dp"
            android:textColor="#F0F0F0"
            android:textSize="8pt">
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20px">
        </LinearLayout>
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="7dp"
            android:text="@string/create_account"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:onClick="createAccount"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background3"
            android:layout_marginRight="10dp"
            android:textColor="#F0F0F0"
            android:textSize="8pt">
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20px">
        </LinearLayout>
        <Button
            android:id="@+id/btnForgottenPassword"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="7dp"
            android:text="@string/forgot_password"
            android:onClick="skipLogin"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background2"
            android:layout_marginRight="10dp"
            android:textColor="#F0F0F0"
            android:textSize="8pt">
        </Button>
    </LinearLayout>
</RelativeLayout>
