<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wadesi.codespeak.ScoreActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80px">
            <TextView
                android:layout_width="600px"
                android:layout_height="100px"
                android:textSize="11pt"
                android:gravity="center"
                android:paddingTop="3px"
                android:fontFamily="Arial"
                android:text="@string/result"
                android:textColor="#3F48CC"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="300px"
                android:id="@+id/tv_score"
                android:textSize="120dp"
                android:layout_gravity="center"
                android:layout_marginLeft="230px"
                android:textColor="#7D3FCC"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_feedback"
                android:textSize="10pt"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="150px"
                android:fontFamily="Arial" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="800px"
            android:layout_height="40px"
            android:layout_gravity="center">
        </LinearLayout>
        <Button
            android:id="@+id/btnCheckProgress"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="7dp"
            android:text="@string/checkProgress"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background"
            android:layout_marginRight="2dp"
            android:textColor="#F0F0F0"
            android:textSize="8pt"
            android:onClick="checkProgress"/>
        <LinearLayout
            android:layout_width="800px"
            android:layout_height="30px"
            android:layout_gravity="center">
        </LinearLayout>
        <Button
            android:id="@+id/btnReturnToTests"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="7dp"
            android:text="@string/returnTests"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background3"
            android:layout_marginRight="2dp"
            android:textColor="#F0F0F0"
            android:textSize="8pt"
            android:onClick="exitToTests"/>
        <LinearLayout
            android:layout_width="800px"
            android:layout_height="30px"
            android:layout_gravity="center">
        </LinearLayout>
        <Button
            android:id="@+id/btnReturnToHome"
            android:layout_height="wrap_content"
            android:layout_width="500px"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="7dp"
            android:text="@string/returnHome"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:background="@drawable/curved_button_background2"
            android:layout_marginRight="2dp"
            android:textColor="#F0F0F0"
            android:textSize="8pt"
            android:onClick="exitToHome"/>
    </LinearLayout>
</RelativeLayout>
